# Extracting-Parliaments-Data

./: .gitignore  EUParl-DB.db  EUParl-DB.sqbpro  README.md  pyproject.toml  requirements.txt
IASD-ProjectDocuments/: GroupProject_Pitch.docx
config/: base.json  base_eu-mps.json  base_eu-votes.json  base_eu.json  base_uk-mps.json  base_uk-votes.json  database.json
data/output/: votes.csv
database/: SQL-Tests.sqbpro  main.db  queries.md  test_1.sql
src/LegiScraper/: database.py  db_unify.py  helpers.py  scraper.py  topic_classifier.py
src/LegiScraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/LegiScraper/eu/: helpers.py  mps.py  votes.py
src/LegiScraper/uk/: helpers.py  mps.py  votes.py
